<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style_for_windows"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddTreningFragment">

    <Button
        android:id="@+id/btnCansel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/slytle_for_button"
        android:layout_margin="6dp"
        android:text="&#5130;"
        />

    <Button
        android:id="@+id/edit_foto"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Ок"
        android:textSize="13sp"
        android:layout_margin="6dp"
        android:textColor="#000000"
        android:textColorHint="#8F8F80"
        android:background="@drawable/slytle_for_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#283030"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        >


        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите название тренировки"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите тип тренировки"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editCountex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите колличество упражнений в тренировке"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/editLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите сылку на видео"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="textUri"
            />

        <EditText
            android:id="@+id/editTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите время тренировки"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="time"
             />
        <EditText
            android:id="@+id/editOpisanie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите краткое описание тренировки"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="textMultiLine"
             />

        <EditText
            android:id="@+id/editTrening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Сама тренировка"
            android:textColor="#FFFFFF"
            android:textColorHint="#B1B1B1"
            android:inputType="textMultiLine"
             />

        <TextView
            android:text="Если у вас нет видео оставьте поле 'Введите сылку на видео' - пустым"
            android:textColor="#99B1B1B1"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>
        </androidx.cardview.widget.CardView>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>