<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Avtorisation"
    android:background="@drawable/style_for_windows">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#ffff"
            app:cardUseCompatPadding="false">


                <ImageView
                    android:background="@drawable/person_login"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"/>
                <EditText
                    android:id="@+id/editTextLoginA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Логин"
                    android:backgroundTint="#ffff"
                    android:textColor="#353535"
                    android:textAlignment="center"
                    android:textColorHint="#818181"
                    android:inputType="textEmailAddress"
                    />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#ffff"
            app:cardUseCompatPadding="false">
            <ImageView
                android:background="@drawable/key_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>
        <EditText
            android:id="@+id/editTextPasswordA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Пароль"
            android:backgroundTint="#ffff"
            android:textColor="#353535"
            android:textAlignment="center"
            android:textColorHint="#818181"
            android:inputType="textPassword" />

        </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/btnSingIn"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="Войти"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@drawable/slytle_for_button_avtorisation"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="25dp"
                android:textColor="#FFFFFF"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp">

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/zabil"
                android:padding="4dp"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:text="Забыли пароль?"
                android:textColor="#D1D1D1"
                android:textAlignment="center"
                android:background="@drawable/slytle_for_button_avtorisation"
                android:textSize="15sp" />

            <TextView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/btnRegister"
                android:padding="4dp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="Создать новый аккаунт"
                android:background="@drawable/slytle_for_button_avtorisation"
                android:textAlignment="center"
                android:textColor="#D1D1D1"
                android:textSize="15sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>