...
            android:layout_margin="6dp"
            android:text="&#5130;"
            />


    <LinearLayout
        android:id="@+id/linerlayout_fragmentadmin_client"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:layout_marginBottom="100dp"
            tools:listitem="@layout/item_client_trening"/>


    </LinearLayout>
    <ImageButton
        android:id="@+id/btn_addtrening"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="6dp"
        android:background="@drawable/ic_baseline_add_circle_24"
...
